# rux

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  graph.html  watcher.sh
docs/: ducktyping.rx  sketch.rx
docs/examples/: abstraction.rx  donut.rx  lifetimes.rx  player_movement.rx
my-project/: player_movement.rx  test.rx
src/: byte_parsing.rs  comp.rs  error.rs  main.rs  ref_count.rs  typing.rs  utilities.rs
src/codegen/: mod.rs
src/grapher/: arithmetic_example.rx  binding.rs  binding_pow.rs  block.rs  blocks.rs  builder.rs  example.rx  graph.rs  graph_dump.rs  graph_template.html  if_example.rx  intern.rs  item.rs  jumps.rs  loop_example.rx  loops.rs  mod.rs  parser.rs  parsing.rs  scope.rs  symbols.rs  test.rs  type_check.rs
src/grapher/builder/: binding.rs  error.rs  jumps.rs  mod.rs  symbols.rs  test.rs
src/grapher/parser/: alias.rs  builder.rs  jumps.rs  mod.rs  overwrites.rs  parsing.rs  sym_id.rs  symbols.rs
src/interpreter/: mod.rs  val.rs
src/literal/: literal.rs
src/literal_parsing/: literal.rs  mod.rs
src/literals/: error.rs  mod.rs
src/parser/: ast.rs  binary_op.rs  binding_pow.rs  const_res.rs  intern.rs  keyword.rs  labels.rs  led.rs  mod.rs  nud.rs  rules.rs  tree.rs  type_tree.rs  typing.rs  unary_op.rs  vars.rs
src/threader/: files.rs  task.rs
src/tokenizing/: binary_op.rs  binding_pow.rs  embedding.rs  mod.rs  num.rs  old.rs  parse_tok.rs  quote.rs  slicing.rs  test.rs  token.rs  ty.rs  unary_op.rs
src/type_parsing/: error.rs  mod.rs
src/types/: error.rs  mod.rs
test-project/: test.rx
(+5 files in other folders)
